# vote-kit

./: .dockerignore  .env.example  .gitignore  Caddyfile  Jenkinsfile  README.md
backend/: .env.example  .eslintrc.json  .prettierrc.json  CLEANUP_APPS.md  Dockerfile  QUERY_DATABASE.md  README.md  RUN_MIGRATION.md  jest.config.js  package-pencil.json  package.json  tsconfig.json
backend/routes/: pencil.js
backend/services/: pencilMCP.js  pencilRenderer.js
backend/src/: index.ts  knexfile.ts
backend/src/__tests__/: auth.service.test.ts  comment.service.test.ts  requirement.service.test.ts  vote.service.test.ts
backend/src/config/: database.ts  logger.ts  redis.ts
backend/src/database/: db.ts
backend/src/interfaces/: ai.interface.ts
backend/src/middleware/: auth.middleware.ts
backend/src/routes/: admin.routes.ts  ai-enhanced.routes.ts  ai-simple.routes.ts  app-generation-simple.routes.ts  app-generation.routes.ts  auth.routes.ts  comment.routes.ts  dev-interaction.routes.ts  feedback.routes.ts  figma.routes.ts  forge.routes.ts  pencil.routes.ts  prototype.routes.ts  requirement.routes.ts  settings.routes.ts  stats.routes.ts  subscription.routes.ts  team.routes.ts  vote.routes.ts  wizard.routes.ts
backend/src/services/: admin.service.ts  ai-factory.service.ts  ai-monitoring.service.ts  analytics.service.ts  app-template.service.ts  artifact-cache.service.ts  auth.service.ts  beta-test.service.ts  comment.service.ts  coze.service.ts  (+30 more)
deploy/: check-environment.sh  deploy-docker.sh  deploy-simple.sh  deploy-unified.sh  docker-compose.simple.yml  docker-compose.unified.yml  fix-and-import-db.sh  fix-database.sh  fix-db-import.sh  fix-sql-import.sh  migrate-to-production.sh  quick-fix.sh  test-app-generation.sh  test-docker-integration.sh  test-fixes.sh
docker-deployment/: docker-compose.yml
docs/: api.md  contributing.md  deployment.md  getting-started.md
forge/: .gitignore  CMakeLists.txt  COMMIT_SUMMARY.md  INSTALL_GUIDE.md  Makefile  README.md  go.mod  go.sum  install.sh  uninstall.sh
forge/cmd/demo/: main.go
forge/cmd/export-server/: main.go
forge/cmd/forge/: main.go
forge/config/: config.yaml.example
forge/internal/ai/: cursor_agent_client.go  generator.go  kiro_client.go
forge/internal/config/: config.go
forge/internal/docker/: builder.go  deployer.go
forge/internal/export/: service.go
forge/internal/git/: manager.go
forge/internal/notify/: callback.go
forge/internal/server/: export_handler.go  server.go
forge/internal/task/: model.go  processor.go
forge/pkg/logger/: logger.go
forge/pkg/queue/: redis_worker.go
forge/systemd/: forge-engine.service  forge-export.service
frontend/: Dockerfile  index.html  nginx-simple.conf  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: copy-images.cjs
frontend/src/: App.vue  main.ts
init/: prod-data-import.sh
inspiration-collector/: .env.example  .gitignore  README.md
(+125 files in other folders)
